--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">BodyBuildingWeightRegister</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="categories">
+
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+
+    </string-array>
 </resources>
